kubernetes/apps/observability/portainer/portainer/app/portainer-agent-k8s-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer-agent-remote
  namespace: portainer
  labels:
    service-type: ingress
  annotations:
    service.cilium.io/global: "true"
    service.cilium.io/shared: "true"
spec:
  type: LoadBalancer
  selector:
    app: portainer-agent-remote
  ports:
    - name: http
      protocol: TCP
      port: 9002
      targetPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: portainer-agent-remote-headless
  namespace: portainer
spec:
  clusterIP: None
  selector:
    app: portainer-agent-remote
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portainer-agent-remote
  namespace: portainer
spec:
  selector:
    matchLabels:
      app: portainer-agent-remote
  template:
    metadata:
      labels:
        app: portainer-agent-remote
    spec:
      serviceAccountName: portainer-sa-clusteradmin
      containers:
      - name: portainer-agent-remote
        image: portainer/agent:2.44.0
        imagePullPolicy: Always
        ports:
        - containerPort: 9001
          protocol: TCP
