kubernetes/apps/observability/portainer/portainer/app/proxy.yaml
---
# yaml-language-server: $schema=https://kubernetesjsonschema.dev/v1.14.0/deployment-apps-v1.json
kind: Deployment
apiVersion: apps/v1
metadata:
  name: &name portainer-proxy
  labels:
    app: *name
  # annotations:
  #   secrets.infisical.com/auto-reload: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: *name
  template:
    metadata:
      labels:
        app: *name
    spec:
      containers:
        - name: *name
          image: harbor.icylair.com/library/portainer-proxy:v0.0.1
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: '1Mi'
              cpu: '1m'
            limits:
              memory: '6Gi'
              cpu: '2500m'
          readinessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            # failureThreshold: 5
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: portainer-proxy
spec:
  selector:
    app: portainer-proxy
  ports:
    - name: http
      targetPort: 80
      port: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app portainer-ingress
spec:
  ingressClassName: traefik-external
  rules:
    - host: &host portainer.cloud.icylair.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portainer-proxy
                port:
                  number: 80
  tls:
  - hosts:
      - portainer.cloud.icylair.com
    secretName: icylair-com-all-prod
---
